added mobile responsiv

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 </head>
 
+<!-- body start from here  -->
+
 <body class="font-lato">
   <header class=" max-w-7xl px-6 lg:px-32 mx-auto lg:mt-10 ">
     <!-- this is navbar  -->
@@ -68,7 +70,7 @@
                 <h3 class="lg:text-white lg:font-bold lg:text-3xl">Fruit Burst</h3>
               </div>
 
-              <div class="dropdown flex-1  absolute -right-64">
+              <div class="dropdown flex-1  absolute -right-48 md:-right-64">
                 <label tabindex="0" class="btn btn-ghost  lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
