added last update

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <!-- body start from here  -->
 
 <body class="font-lato">
+
   <header class=" container px-6 lg: mx-auto lg:mt-10 ">
     <!-- this is navbar  -->
 
@@ -280,7 +281,7 @@
 
         <!-- card one  -->
 
-        <div class="border-2 rounded-xl px-20 py-5">
+        <div class="border-2 rounded-xl mt-5 px-20 py-5">
 
           <div class="flex justify-center">
             <img src="./images/fruit6.png" alt="">
@@ -501,7 +502,7 @@
     <section class="container px-8 lg: mx-auto mt-12  lg:mt-32">
 
       
-      <div class="w-full p-10" style="background-image: url('./images/team.png');">
+      <div class="w-full p-10 " style="background-image: url('./images/team.png');">
 
         <div class="text-white text-center  pt-20">
           <h3 class=" text-2xl lg:text-4xl font-bold ">Meet the team section</h3>
@@ -691,7 +692,7 @@
 
 
           <div class="flex flex-col justify-center lg:flex-row lg:justify-end gap-3 lg:flex-row-reverse  ">
-            <div class="flex justify-center ">
+            <div class="flex justify-center   ">
               <img src="./images/Ellipse 2 (1).svg" alt="">
             </div>
             <div>
@@ -770,7 +771,7 @@
   </main>
 
   <!-- Footer section  -->
-  <footer class="max-w-7xl mx-auto mt-10 mb-28 pb-40 bg-[#121212]">
+  <footer class="max-w-7xl mx-auto mt-10 mb-28 px-10 pb-40 bg-[#121212]">
 
     <div class="flex flex-col justify-center items-center gap-10">
 
