added some header overflow change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- tailwind and daisyui -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://cdn.tailwindcss.com"></script>
 
   <!-- Google font -->
 
@@ -54,7 +54,7 @@
 
 <body class="font-lato ">
 
-  <header class=" overflow-hidden container px-6 lg: mx-auto lg:mt-10 ">
+  <header class="  overflow-hidden w-screen container px-6 lg: mx-auto lg:mt-10 ">
     <!-- this is navbar  -->
 
     <nav class=" lg:bg-[#F85559] rounded-[500px]">
