--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> this is assignment three</title>
+  <title> Fruit Burst</title>
 
   <!-- tailwind and daisyui -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
@@ -47,6 +47,8 @@
 
     
   </style>
+
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
 
 
 
